# adhoc-data

./: .env-sample  .gitignore  README.md  pyproject.toml
notebooks/cdr_summaries/: 1 - extract text from pdf.ipynb
notebooks/dcra/: 1 - clean quarterly data.ipynb  2 - compare to CDR data.ipynb
